# self-learn

./: Cargo.toml  Dockerfile  data.json  index.html
src/: main.rs
