[package]
name = "selflearn"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = {version = "0.12.5", features = ["json"]}
rocket = "0.5.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.124"
tokio = "1.39.2"
